# python-rf-tools

./: .gitignore  __init__.py  _version.py  adc_to_mdif.py  build.ps1  conftest.py  pyproject.toml  readme.md  rf-dbf-to-mdif.spec  rf-plot.spec  skrf_tdr.py  thoughts.txt
.claude/: settings.local.json
4pack/: out_test.mdif
data_to_mdif/: __init__.py  cli.py  how_to_use_mdif_generators.md  master_mdif_generator_linear_char.py  master_mdif_generator_nl_char.py
data_to_mdif/gain/: cli.py  converter.py  parser.py
data_to_mdif/imd/: __init__.py  cli.py  converter.py  parser.py
data_to_mdif/nf/: cli.py  converter.py  parser.py
data_to_mdif/s2p/: __init__.py  cli.py  converter.py  sparam_nf_to_mdif.py
data_to_mdif/scripts/: gain_compression_to_mdif.py  imd_sweep_to_mdif.py  nf_sweep_to_mdif.py  s2p_to_mdif.py
dbf_to_mdif/: __init__.py  cli.py  converter.py  parser.py
gain/: __init__.py  converter.py  parser.py
imd/: parser.py
mdif_tdr/: __init__.py  bug.txt  cli.py  converter.py
nf/: __init__.py  converter.py
plot/: __init__.py  cli.py  gui.py
plotting/: task.txt
s2p/: converter.py  parser.py
sorting/4pack/: sorting.py
sorting/rdi/: sorting.py
specs/: rf-dbf-to-mdif.spec  rf-mdif-tdr.spec  rf-plot.spec  rf_mdif.spec  rf_sort_4pack.spec  rf_sort_rdi.spec
templates/mdif_examples/: sample_sparameters.mdif
templates/measurement_data/: E4_Gain_Comp_27.5.csv  E4_NB.s2p  E4_NF.csv  E4_SWP_IMD.csv  NF_PROCESSED_RXEM1-000036_PATH1_-20.0C.csv  (+1 more)
tests/: test_mdif_tdr.py
utils/: cli.py  freq.py  io.py  mdif.py  mdif_to_s1p.py  net.py
(+7 files in other folders)
